--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
         <title>Landing Page</title>
     </head>
 
     <body>
+        <div class="header">
+
+        </div>
+
+        <div class="content">
+
+        </div>
+
+        <div class="footer">
+
+        </div>
 
     </body>
 </html>
