--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
     <body>
         <div class="header">
+            <h1>Header Logo</h1>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
 
         </div>
 
