--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
     </head>
 
     <body>
-        <div class="header">
-            <h1>Header Logo</h1>
+        <div class="header">Header Logo
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
             </ul>
+            <div class="hero">
+                <h1>This website is awesome</h1>
+                <h2>This website has some subtext that goes here under the 
+                    main title. It's a smaller font and the color is lower 
+                    contrast
+                </h2>
+                <button>Sign up</button>
+            </div>
 
         </div>
 
