Add all elements to hero' q '

--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
             </ul>
-            <div class="hero">
-                <h1>This website is awesome</h1>
-                <h2>This website has some subtext that goes here under the 
+        </div>
+
+        <div class="container">
+            <div class="first">
+                <div class="hero">This website is awesome</div>
+                <div class="subtext">This website has some subtext that goes here under the 
                     main title. It's a smaller font and the color is lower 
                     contrast
-                </h2>
-                <button>Sign up</button>
-            </div>
-
+                </div>
+                <button>Sign up</button></div>
+                <div class="card">This item is a placeholder</div>
         </div>
 
         <div class="content">
