--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     contrast
                 </div>
                 <button>Sign up</button></div>
-                <div class="card">This item is a placeholder</div>
+            <div class="card">This item is a placeholder for an image</div>
         </div>
 
         <div class="content">
