--- a/index.html
+++ b/index.html
@@ -29,11 +29,24 @@
         </div>
 
         <div class="content">
-
+            <div class="info">Some Random Information.</div>
+            <div class="items">
+                <div class="item">
+                    <div class="square"></div>
+                    <div class="subtext">this is some subtext under an illustration or image</div></div>
+                <div class="item">
+                    <div class="square"></div>
+                    <div class="subtext">this is some subtext under an illustration or image</div></div>
+                <div class="item">
+                    <div class="square"></div>
+                    <div class="subtext">this is some subtext under an illustration or image</div></div>
+                <div class="item">
+                    <div class="square"></div>
+                    <div class="subtext">this is some subtext under an illustration or image</div></div>
+            </div>
         </div>
 
         <div class="footer">
-
         </div>
 
     </body>
