--- a/index.html
+++ b/index.html
@@ -27,22 +27,31 @@
                 <button>Sign up</button></div>
             <div class="card">This item is a placeholder for an image</div>
         </div>
-
-        <div class="content">
-            <div class="info">Some Random Information.</div>
-            <div class="items">
-                <div class="item">
-                    <div class="square"></div>
-                    <div class="subtext">this is some subtext under an illustration or image</div></div>
-                <div class="item">
-                    <div class="square"></div>
-                    <div class="subtext">this is some subtext under an illustration or image</div></div>
-                <div class="item">
-                    <div class="square"></div>
-                    <div class="subtext">this is some subtext under an illustration or image</div></div>
-                <div class="item">
-                    <div class="square"></div>
-                    <div class="subtext">this is some subtext under an illustration or image</div></div>
+        <div class="middle">
+            <div class="content_1">
+                <div class="info">Some Random Information.</div>
+                <div class="items">
+                    <div class="item">
+                        <div class="square"></div>
+                        <div class="subtext">this is some subtext under an illustration or image</div></div>
+                    <div class="item">
+                        <div class="square"></div>
+                        <div class="subtext">this is some subtext under an illustration or image</div></div>
+                    <div class="item">
+                        <div class="square"></div>
+                        <div class="subtext">this is some subtext under an illustration or image</div></div>
+                    <div class="item">
+                        <div class="square"></div>
+                        <div class="subtext">this is some subtext under an illustration or image</div></div>
+                </div>
+            </div>
+            <div class="content_2">
+                <div class="full_quote">
+                    <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just 
+                        filling up the space or maybe people will actually read it. Who knows? All I know is that it 
+                        looks nice.
+                    </div>
+                    <div class="cite">-Thor, God of Thunder</div></div>
             </div>
         </div>
 
