--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="card">This item is a placeholder for an image</div>
         </div>
         <div class="middle">
-            <div class="content_1">
+            <div class="content c1">
                 <div class="info">Some Random Information.</div>
                 <div class="items">
                     <div class="item">
@@ -45,13 +45,20 @@
                         <div class="subtext">this is some subtext under an illustration or image</div></div>
                 </div>
             </div>
-            <div class="content_2">
+            <div class="content c2">
                 <div class="full_quote">
                     <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just 
                         filling up the space or maybe people will actually read it. Who knows? All I know is that it 
                         looks nice.
                     </div>
                     <div class="cite">-Thor, God of Thunder</div></div>
+            </div>
+            <div class="content c3">
+                <div class="rect">
+                    <div class="cta">Call to action! It's time!
+                    <div class="subtext">Sign up for our product by clicking that button over there!</div></div>
+                    <button>Sign up</button>
+                </div>
             </div>
         </div>
 
