Add Images and Vectors, change gradient and colors

--- a/index.html
+++ b/index.html
@@ -9,40 +9,44 @@
     </head>
 
     <body>
-        <div class="header">Header Logo
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </div>
+        <div class="top">
+            <div class="header"><img src="./Logo.svg" alt="Brain with a computer chip next to it">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
 
-        <div class="container">
-            <div class="first">
-                <div class="hero">This website is awesome</div>
-                <div class="subtext">This website has some subtext that goes here under the 
-                    main title. It's a smaller font and the color is lower 
-                    contrast
-                </div>
-                <button>Sign up</button></div>
-            <div class="card">This item is a placeholder for an image</div>
+            <div class="container">
+                <div class="first">
+                    <div class="hero">This website is awesome</div>
+                    <div class="subtext">This website has some subtext that goes here under the 
+                        main title. It's a smaller font and the color is lower 
+                        contrast
+                    </div>
+                    <button>Sign up</button></div>
+                <div class="card">
+                    <div class="gradient"></div>
+                    <img src="./robot.jpg" alt="a lonely robot staring at a server room" height="768" width="1368"></div>
+            </div>
         </div>
         <div class="middle">
             <div class="content c1">
-                <div class="info">Some Random Information.</div>
+                <div class="info">AI-generated Image Gallery</div>
                 <div class="items">
                     <div class="item">
-                        <div class="square"></div>
-                        <div class="subtext">this is some subtext under an illustration or image</div></div>
+                        <div class="square"><img src="./poppy.jpg" alt="a group of pink poppies on a black background" width="175" height="175"></div>
+                        <div class="subtext">these poppies were generated with AI. It's crazy to think how far AI-generated content has come in just a few years!</div></div>
                     <div class="item">
-                        <div class="square"></div>
-                        <div class="subtext">this is some subtext under an illustration or image</div></div>
+                        <div class="square"><img src="./poppy.jpg" alt="a group of pink poppies on a black background" width="175" height="175"></div>
+                        <div class="subtext">these poppies were generated with AI. It's crazy to think how far AI-generated content has come in just a few years!</div></div>
                     <div class="item">
-                        <div class="square"></div>
-                        <div class="subtext">this is some subtext under an illustration or image</div></div>
+                        <div class="square"><img src="./poppy.jpg" alt="a group of pink poppies on a black background" width="175" height="175"></div>
+                        <div class="subtext">these poppies were generated with AI. It's crazy to think how far AI-generated content has come in just a few years!</div></div>
                     <div class="item">
-                        <div class="square"></div>
-                        <div class="subtext">this is some subtext under an illustration or image</div></div>
+                        <div class="square"><img src="./poppy.jpg" alt="a group of pink poppies on a black background" width="175" height="175"></div>
+                        <div class="subtext">these poppies were generated with AI. It's crazy to think how far AI-generated content has come in just a few years!</div></div>
                 </div>
             </div>
             <div class="content c2">
